[CHORE] Enable navbar dropdowns on mobile and add Messenger and Notifications pages

--- a/src/assets/ui/styles/globals.css
+++ b/src/assets/ui/styles/globals.css
@@ -195,6 +195,10 @@
     @apply hidden md:flex;
   }
 
+  .only-desktop-block {
+    @apply hidden md:block;
+  }
+
   /* Transition Utilities */
   .primary-transition {
     @apply transition duration-150;
