--- a/src/assets/ui/styles/globals.css
+++ b/src/assets/ui/styles/globals.css
@@ -37,7 +37,7 @@
   }
 
   .skeleton-bg {
-    @apply bg-gray-200 dark:bg-neutral-500;
+    @apply bg-neutral-300 dark:bg-neutral-600;
   }
 
   /* Border Utilities */
