--- a/src/assets/ui/styles/globals.css
+++ b/src/assets/ui/styles/globals.css
@@ -40,6 +40,10 @@
     @apply bg-neutral-300 dark:bg-neutral-600;
   }
 
+  .skeleton-placeholder {
+    @apply bg-neutral-200/50 dark:bg-neutral-700/50;
+  }
+
   /* Border Utilities */
   .primary-border {
     @apply border-gray-300 md:border-gray-200 dark:border-neutral-700;
