--- a/src/assets/globals.css
+++ b/src/assets/globals.css
@@ -4,83 +4,79 @@
 
 @layer components {
   /* Background Utilities */
-  .card-bg {
+  .bg-card {
     @apply bg-white dark:bg-neutral-800;
   }
 
-  .accent-bg {
-    @apply bg-white dark:bg-neutral-700;
-  }
-
-  .active-bg {
+  .bg-active {
     @apply bg-gray-200 dark:bg-neutral-900;
   }
 
-  .active-bg-inverse {
+  .bg-active-inverse {
     @apply bg-neutral-900 dark:bg-gray-200;
   }
 
-  .primary-bg {
+  .bg-primary {
     @apply bg-gray-100 dark:bg-neutral-700;
   }
 
-  .primary-bg-light {
+  .bg-primary-light {
     @apply bg-gray-100;
   }
 
-  .secondary-bg {
+  .bg-secondary {
     @apply bg-gray-200 dark:bg-neutral-600;
   }
 
-  .secondary-bg-light {
+  .bg-secondary-light {
     @apply bg-gray-200;
   }
 
-  .skeleton-bg {
+  .bg-skeleton {
     @apply bg-neutral-300 dark:bg-neutral-600;
   }
 
-  .skeleton-placeholder {
+  .bg-skeleton-placeholder {
     @apply bg-neutral-200/50 dark:bg-neutral-700/50;
   }
 
   /* Border Utilities */
-  .primary-border {
+  .border-primary {
     @apply border-gray-300 md:border-gray-200 dark:border-neutral-700;
   }
 
-  .primary-border-light {
+  .border-primary-light {
     @apply border-gray-200;
   }
 
-  .primary-border-dark {
+  .border-primary-dark {
     @apply border-neutral-700;
   }
 
-  .primary-border-light-full {
+  .border-primary-light-full {
     @apply border-gray-200 md:border-gray-200;
   }
 
   /* Divide Utilities */
-  .primary-divide {
+  .divide-primary {
     @apply divide-gray-300 md:divide-gray-200 dark:divide-neutral-700;
   }
 
   /* Fill Utilities */
-  .primary-fill {
+  .fill-primary {
     @apply fill-neutral-900 dark:fill-gray-100;
   }
 
-  .secondary-fill {
+  .fill-secondary {
     @apply fill-neutral-600 dark:fill-neutral-400;
   }
 
   /* Placeholder Utilities */
-  .primary-placeholder {
+  .placeholder-primary {
     @apply placeholder-neutral-500 dark:placeholder-neutral-400;
   }
 
-  .accent-placeholder {
+  .placeholder-accent {
     @apply placeholder-neutral-600 dark:placeholder-neutral-300;
   }
 
@@ -106,74 +102,74 @@
   }
 
   /* Text Utilities */
-  .accent-text {
+  .text-accent {
     @apply text-neutral-600 dark:text-neutral-300;
   }
 
-  .primary-text {
+  .text-primary {
     @apply text-neutral-900 dark:text-gray-100;
   }
 
-  .primary-text-light {
+  .text-primary-light {
     @apply text-neutral-900;
   }
 
-  .primary-text-dark {
+  .text-primary-dark {
     @apply text-gray-100;
   }
 
-  .primary-text-inverse {
+  .text-primary-inverse {
     @apply text-gray-100 dark:text-neutral-900;
   }
 
-  .secondary-text {
+  .text-secondary {
     @apply text-neutral-600 dark:text-neutral-400;
   }
 
-  .secondary-text-dark {
+  .text-secondary-dark {
     @apply text-neutral-400;
   }
 
-  .tertiary-text {
+  .text-tertiary {
     @apply text-neutral-500 dark:text-neutral-400;
   }
 
-  .tertiary-text-dark {
+  .text-tertiary-dark {
     @apply text-neutral-400;
   }
 
   /* Bottom sheet Utilities */
-  .bottom-sheet-content {
-    @apply card-bg fixed bottom-0 left-0 right-0 z-40 rounded-t-2xl pt-3 md:mx-auto md:w-[432px];
+  .sheet-content {
+    @apply bg-card fixed bottom-0 left-0 right-0 z-40 rounded-t-2xl pt-3 md:mx-auto md:w-[432px];
   }
 
-  .bottom-sheet-handle {
-    @apply secondary-bg mb-2;
+  .sheet-handle {
+    @apply bg-secondary mb-2;
   }
 
-  .bottom-sheet-overlay {
+  .sheet-overlay {
     @apply fixed inset-0 z-40 bg-overlay-100;
   }
 
   /* Card Utilities */
   .card {
-    @apply card-bg primary-transition md:rounded-lg;
+    @apply bg-card transition-primary md:rounded-lg;
   }
 
   /* Flexbox Utilities */
-  .flex-center {
+  .flex-align-center {
     @apply flex items-center;
   }
 
-  .flex-center-justify-center {
+  .flex-center {
     @apply flex items-center justify-center;
   }
 
-  .flex-center-justify-between {
+  .flex-between {
     @apply flex items-center justify-between;
   }
 
-  .center-justify-between {
+  .align-between {
     @apply items-center justify-between;
   }
 
@@ -191,20 +187,20 @@
   }
 
   /* Responsive Utilities */
-  .only-mobile {
+  .responsive-mobile-only {
     @apply md:hidden;
   }
 
-  .only-desktop {
+  .responsive-desktop-only {
     @apply hidden md:flex;
   }
 
-  .only-desktop-block {
+  .responsive-desktop-block {
     @apply hidden md:block;
   }
 
   /* Transition Utilities */
-  .primary-transition {
+  .transition-primary {
     @apply transition duration-300;
   }
 }
